2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPControls.cpp:
	* browser-plugin/totemGMPPlayer.cpp:
	* browser-plugin/totemGMPPlayer.h:
	* browser-plugin/totemPlugin.cpp: Add support for Player.playState
	and Controls.isAvailable in the GMP plugin (Helps: #547659)

2008-08-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/plugins/pythonconsole/pythonconsole.py (show_console):
	Only mark the actual printed string for translation, not the whole
	python statement for eval (Closes: #548004)

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (entry_parsed):
	Fix accessing a freed string, the metadata hashtable from
	the playlist parser returns const data, which we need to
	duplicate

2008-08-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Add ATSC support for gstreamer dvb.

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
	When we have a streaming title, pass it on using the TITLE_CHANGE
	signal. Fixes stream title not updating for soma.fm streams
	(Closes: #471233)

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bvw-test.c (on_got_metadata), (on_title_changed),
	(main): Listen to got-metadata and title-change signals

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/ontop/totem-ontop.c (update_from_state):
	* src/plugins/tracker/totem-tracker-widget.c
	(totem_tracker_widget_set_property):
	* src/totem-cell-renderer-video.c
	(totem_cell_renderer_video_set_property):
	* src/totem-sidebar.c (cb_resize):
	* src/totem-video-indexer.c (totem_print_string),
	(totem_print_int):
	* src/totem-video-thumbnailer.c (has_audio),
	(on_got_metadata_event):
	* src/totem.c (totem_get_nice_name_for_stream), (show_controls):
	Unset GValues after having used them, to make sure they get cleaned