@@ -1,6 +1,12 @@
 2008-08-19  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemGMPControls.cpp:
+	* browser-plugin/totemGMPPlayer.cpp: A few fixes pointed out
+	by Christian Persch <chpe@gnome.org> (Helps: #547659)
+
+2008-08-19  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemGMPControls.cpp:
 	* browser-plugin/totemGMPPlayer.cpp:
 	* browser-plugin/totemGMPPlayer.h:
 	* browser-plugin/totemPlugin.cpp: Add support for Player.playState
